--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,1 @@
-<button (click)="traerTodos()" > Traer todos </button>
-<button (click)="agregar()" > Agregar</button>
+<app-principal></app-principal>
