--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,3 +1,2 @@
-<p>
-  principal works!
-</p>
+<button (click)="traerTodos()" > Traer todos </button>
+<button (click)="agregar()" > Agregar</button>
